@@ -6,6 +6,10 @@ NEXT
 The --tt option for Template Toolkit is now --ttml.  The short version
 still works.
 
+The standalone version of ack no longer supports the --faq or --cookbook
+options, which never worked right for it anyway.  Instead, --man includes
+the FAQ and Cookbook.
+
 [FIXES]
 ack would stop finding files if there was a file named "0" in the current
 directory. Thanks, Rob Hoelz. (GH #162)
